--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
+    "gulp-shell": "^0.5.2",
     "gulp-util": "^3.0.4",
     "imports-loader": "^0.6.3",
     "run-sequence": "^1.2.1",
