--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prestart": "npm install",
     "start": "gulp --dev",
     "build": "npm run build",
-    "update": "./node_modules/.bin/updtr"
+    "update": "./node_modules/.bin/updtr",
+    "postinstall": "node setup"
   },
   "keywords": [
     "toolkit",
