--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
-    "gulp-shell": "^0.5.2",
     "gulp-util": "^3.0.4",
     "imports-loader": "^0.6.3",
     "run-sequence": "^1.2.1",
     "script-loader": "^0.7.0",
+    "shelljs": "^0.7.2",
     "updtr": "^0.1.15",
     "webpack": "^1.13.1"
   }
