--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-util": "^3.0.4",
+    "handlebars-helper-repeat": "^1.0.0",
     "imports-loader": "^0.6.3",
     "run-sequence": "^1.2.1",
     "script-loader": "^0.7.0",
