install missing deps

--- a/package.json
+++ b/package.json
@@ -41,10 +41,14 @@
     "gulp-csso": "^2.0.0",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^2.4.0",
+    "gulp-regex-rename": "^0.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.1",
+    "gulp-svgstore": "^6.1.0",
     "gulp-util": "^3.0.4",
     "handlebars-helper-repeat": "^1.0.0",
+    "imagemin-pngquant": "^5.0.0",
     "imports-loader": "^0.6.3",
     "run-sequence": "^1.2.1",
     "script-loader": "^0.7.0",
